snowflakes.css
/*! MIT License; https://raw.githubusercontent.com/Buom01/snowflakes.css/master/LICENSE */
.snow {
  position: fixed;
  overflow: hidden;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  padding: 0;
  color: white;
  pointer-events: none;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
}
.snow span {
  text-shadow: 0 0 5px #08F;
  position: fixed;
  z-index: 999999;
  opacity: 0.95;
  margin: 0;
  padding: 0;
  pointer-events: none;
  top: -5%;
  /* sizes */
  /* fall animation */
  /* rotation animation */
  /* left-right animation */
  -webkit-animation-iteration-count: infinite;
          animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out, linear, linear;
          animation-timing-function: ease-in-out, linear, linear;
  /* left-right animation: movement size */
  /* left-right animation: duration */
  /* Positions */
  /* delay */
}
.snow span:nth-child(4n+1) {
  font-size: 10px;
}
.snow span:nth-child(4n+2) {
  font-size: 12px;
}
.snow span:nth-child(4n+3) {
  font-size: 14px;
}
.snow span:nth-child(4n+4) {
  font-size: 16px;
}
@-webkit-keyframes fall {
  0% {
    top: -10%;
  }
  100% {
    top: 110%;
  }
}
@keyframes fall {
  0% {
    top: -10%;
  }
  100% {
    top: 110%;
  }
}
@-webkit-keyframes rot {
  0% {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(60deg);
            transform: rotate(60deg);
  }
}
@keyframes rot {
  0% {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(60deg);
            transform: rotate(60deg);
  }
}
@-webkit-keyframes rot_r {
  0% {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(-60deg);
            transform: rotate(-60deg);
  }
}
@keyframes rot_r {
  0% {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(-60deg);
            transform: rotate(-60deg);
  }
}
@-webkit-keyframes left_right1 {
  0% {
    margin-left: 0;
  }
  50% {
    margin-left: 25px;
  }
  100% {
    margin-left: 0;
  }
}
@keyframes left_right1 {
  0% {
    margin-left: 0;
  }
  50% {
    margin-left: 25px;
  }
  100% {
    margin-left: 0;
  }
}
@-webkit-keyframes left_right2 {
  0% {
    margin-left: 0;
  }
  50% {
    margin-left: 20px;
  }
  100% {
    margin-left: 0;
  }
}
@keyframes left_right2 {
  0% {
    margin-left: 0;
  }
  50% {
    margin-left: 20px;
  }
  100% {
    margin-left: 0;
  }
}
@-webkit-keyframes left_right3 {
  0% {
    margin-left: 0;
  }
  50% {
    margin-left: 15px;
  }
  100% {
    margin-left: 0;
  }
}
@keyframes left_right3 {
  0% {
    margin-left: 0;
  }
  50% {
    margin-left: 15px;
  }
  100% {
    margin-left: 0;
  }
}
@-webkit-keyframes left_right4 {
  0% {
    margin-left: 0;
  }
  50% {
    margin-left: 10px;
  }
  100% {
    margin-left: 0;
  }
}
@keyframes left_right4 {
  0% {
    margin-left: 0;
  }
  50% {
    margin-left: 10px;
  }
  100% {
    margin-left: 0;
  }
}
@-webkit-keyframes left_right5 {
  0% {
    margin-left: 0;
  }
  50% {
    margin-left: 5px;
  }
  100% {
    margin-left: 0;
  }
}
@keyframes left_right5 {
  0% {
    margin-left: 0;
  }
  50% {
    margin-left: 5px;
  }
  100% {
    margin-left: 0;
  }
}
.snow span:nth-child(10n+1) {
  -webkit-animation-name: left_right1, fall, rot_r;
          animation-name: left_right1, fall, rot_r;
}
.snow span:nth-child(10n+2) {
  -webkit-animation-name: left_right2, fall, rot_r;
          animation-name: left_right2, fall, rot_r;
}
.snow span:nth-child(10n+3) {
  -webkit-animation-name: left_right3, fall, rot;
          animation-name: left_right3, fall, rot;
}
.snow span:nth-child(10n+4) {
  -webkit-animation-name: left_right4, fall, rot_r;
          animation-name: left_right4, fall, rot_r;
}
.snow span:nth-child(10n+5) {
  -webkit-animation-name: left_right5, fall, rot;
          animation-name: left_right5, fall, rot;
}
.snow span:nth-child(10n+6) {
  -webkit-animation-name: left_right1, fall, rot;
          animation-name: left_right1, fall, rot;
}
.snow span:nth-child(10n+7) {
  -webkit-animation-name: left_right2, fall, rot;
          animation-name: left_right2, fall, rot;
}
.snow span:nth-child(10n+8) {
  -webkit-animation-name: left_right3, fall, rot_r;
          animation-name: left_right3, fall, rot_r;
}
.snow span:nth-child(10n+9) {
  -webkit-animation-name: left_right4, fall, rot;
          animation-name: left_right4, fall, rot;
}
.snow span:nth-child(10n+10) {
  -webkit-animation-name: left_right5, fall, rot_r;
          animation-name: left_right5, fall, rot_r;
}
.snow span:nth-child(14n+1) {
  -webkit-animation-duration: 3000ms, 9500ms, 950ms;
          animation-duration: 3000ms, 9500ms, 950ms;
}
.snow span:nth-child(14n+2) {
  -webkit-animation-duration: 3250ms, 9000ms, 1150ms;
          animation-duration: 3250ms, 9000ms, 1150ms;
}
.snow span:nth-child(14n+3) {
  -webkit-animation-duration: 3500ms, 9750ms, 1000ms;
          animation-duration: 3500ms, 9750ms, 1000ms;
}
.snow span:nth-child(14n+4) {
  -webkit-animation-duration: 3750ms, 9250ms, 850ms;
          animation-duration: 3750ms, 9250ms, 850ms;
}
.snow span:nth-child(14n+5) {
  -webkit-animation-duration: 4000ms, 10500ms, 1050ms;
          animation-duration: 4000ms, 10500ms, 1050ms;
}
.snow span:nth-child(14n+6) {
  -webkit-animation-duration: 4500ms, 10000ms, 900ms;
          animation-duration: 4500ms, 10000ms, 900ms;
}
.snow span:nth-child(14n+7) {
  -webkit-animation-duration: 5000ms, 10250ms, 1100ms;
          animation-duration: 5000ms, 10250ms, 1100ms;
}
.snow span:nth-child(14n+8) {
  -webkit-animation-duration: 3000ms, 9500ms, 900ms;
          animation-duration: 3000ms, 9500ms, 900ms;
}
/* ... */

